test/bad/arrays/comprehension02.px

a = [for x in 1...5 yield y]
